# sbsat

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  autogen.sh  configure  configure.ac
include/: Makefile.am  Makefile.in  bdd_clustering.h  bdd_manager.h  bdd_ops.h  bdd_print.h  bdd_type_detection.h  config.h  config.h.in  equiv.h  inference_queue.h  sbsat.h  sbsat_formats.h  sbsat_headers.h  sbsat_params.h  sbsat_print.h  sbsat_queue.h  sbsat_solvers.h  sbsat_stats.h  sbsat_types.h  sbsat_utils.h  sbsat_vars.h  symtable.h
lib/cudd/: Makefile
lib/cudd/include/: cudd.h  cuddInt.h  epdInt.h  util.h
lib/cudd/src/: cuddUtil.c  datalimit.c  pipefork.c
lib/funcsat/: README  check_solution.c  configure  configure.ac
lib/funcsat/src/: funcsat.h  funcsat.tex  funcsat_internal.h
lib/funcsat/src/funcsat/: fibheap_internal.h  hashtable.h  system.h  vec_bool.h  vec_clause_block.h  vec_reason_info.h  vec_uint64.h  vec_uintmax.h
lib/funcsat/src/util/: hashtable.c  hashtable_utility.c
lib/picosat/: Makefile
lib/picosat/include/: picosat.h
old/: sbsat.c
old/bddops/: bdd_manager.c  bdd_ops.c  bdd_print.c  clustering_heuristics.c  type_detection.c
old/formats/: parse_cnf.c  process_aiger.c  process_cnf.c  read_input.c
old/solvers/: solve_smurf.c
old/solvers/gelim/: gelim_solver.c
old/solvers/smurf/: smurf_cache.c  smurf_heuristic.c  solve_smurf_core.c
old/solvers/smurf/fn_andequals/: hr_lsgb_andequals_init.c
old/solvers/smurf/fn_andequalscounter/: bt_specfn_andequalscounter.c  fn_andequalscounter.c
old/solvers/smurf/fn_droppedvar/: bt_droppedvar.c  fn_droppedvar.c
old/solvers/smurf/fn_inference/: bdd2inference.c  bt_inference.c  fn_inference.c
old/solvers/smurf/fn_minmax/: bdd2specfn_minmax.c  fn_minmax.c
old/solvers/smurf/fn_minmaxcounter/: bdd2specfn_minmaxcounter.c  bt_specfn_minmaxcounter.c  fn_minmaxcounter.c  hr_lsgb_minmaxcounter_update.c
old/solvers/smurf/fn_negminmax/: fn_negminmax.c
old/solvers/smurf/fn_negminmaxcounter/: bdd2specfn_negminmaxcounter.c  fn_negminmaxcounter.c  hr_lsgb_negminmaxcounter_init.c  hr_lsgb_negminmaxcounter_update.c
old/solvers/smurf/fn_or/: bdd2specfn_or.c  bt_specfn_or.c  fn_or.c  hr_lsgb_or_init.c  hr_lsgb_or_update.c
old/solvers/smurf/fn_orcounter/: bdd2specfn_orcounter.c  bt_specfn_orcounter.c  hr_lsgb_orcounter_init.c
old/solvers/smurf/fn_smurf/: bt_smurf.c  fn_smurf.c
old/solvers/smurf/fn_xor/: bdd2specfn_xor.c  bt_specfn_xor.c  fn_xor.c  (+1 more)
old/utils/: equiv.c  queue.c  sbsat_params_fn.c  sbsat_print.c  sbsat_vars.c  signal.c  zread.c
scripts/: cnfdd_diff.sh  collect_stats.sh  difftest.sh  difftest2.sh  fix.sh  fuzzsat  fuzzsat-stats  fuzzsat_fs_solve.sh  gen_plots.sh  gnuplot_example.sh  reordering_script  sdsb_run.sh  sgen_run  sgen_sat_run  sgen_unsat_run  sort_by_ram.sh  sort_by_time.sh  vliw_unsat_2.0_run  wildbenches2009_run
src/: Makefile.am  Makefile.in  sbsat.c
src/bddops/: Makefile.am  Makefile.in  bdd_inferences.c  clustering_ve.c  early_quantification.c  inference_queue.c  safe_assignments.c
src/cudd/: Makefile.in  README
src/cudd/cudd/: Makefile.am  Makefile.in  cuddAPI.c  cuddAndAbs.c  cuddBddAbs.c  cuddInteract.c  cuddLinear.c  cuddReorder.c  cuddSymmetry.c  cuddTable.c  cuddUtil.c
src/cudd/epd/: Makefile.am  Makefile.in
src/cudd/include/: Makefile.in  cudd.h  cuddInt.h
src/cudd/mtr/: Makefile.am  Makefile.in
src/cudd/st/: Makefile.am  Makefile.in
src/cudd/util/: Makefile.am  Makefile.in  cpu_time.c
src/formats/: Makefile.am  Makefile.in  aiger.c  iteformat.c  write_cnf.c  write_output.c
src/solvers/: Makefile.am  Makefile.in  solve_funcsat.c  solve_picosat.c  solve_smurf.c
src/solvers/funcsat/: Makefile.am  Makefile.in  TODO  main.c
src/solvers/funcsat/src/: Makefile.am  Makefile.in  funcsat.c  funcsat.w
src/solvers/funcsat/src/funcsat/: config.h  config.h.in  fibheap.h  hashtable_itr.h  hashtable_private.h  vec_clause_head.h  vec_uintptr.h  vecgen.h  vecgen.h.in
src/solvers/funcsat/src/util/: fibheap.c  hashtable_itr.c
src/solvers/gelim/: Makefile.am  Makefile.in  gelim_solver.h
src/solvers/include/: Makefile.in
src/solvers/picosat/: Makefile.am  Makefile.in  picosat.c
src/solvers/smurf/: Makefile.am  Makefile.in  smurf_print.c  solve_smurf_init.c
src/solvers/smurf/fn_andequals/: Makefile.am  Makefile.in  bdd2specfn_andequals.c  bt_specfn_andequals.c  fn_andequals.c  hr_lsgb_andequals_update.c
src/solvers/smurf/fn_andequalscounter/: Makefile.am  Makefile.in  bdd2specfn_andequalscounter.c  hr_lsgb_andequalscounter_init.c  hr_lsgb_andequalscounter_update.c
src/solvers/smurf/fn_droppedvar/: Makefile.am  Makefile.in  bdd2droppedvar.c
src/solvers/smurf/fn_inference/: Makefile.am  Makefile.in  hr_lsgb_inference_init.c  hr_lsgb_inference_update.c
src/solvers/smurf/fn_minmax/: Makefile.am  Makefile.in  bt_specfn_minmax.c
src/solvers/smurf/fn_minmaxcounter/: Makefile.am  Makefile.in  hr_lsgb_minmaxcounter_init.c
src/solvers/smurf/fn_negminmax/: Makefile.am  Makefile.in  bdd2specfn_negminmax.c  bt_specfn_negminmax.c  hr_lsgb_negminmax_update.c
src/solvers/smurf/fn_negminmaxcounter/: Makefile.am  Makefile.in  bt_specfn_negminmaxcounter.c
src/solvers/smurf/fn_or/: Makefile.am  Makefile.in
src/solvers/smurf/fn_orcounter/: Makefile.am  Makefile.in  fn_orcounter.c  hr_lsgb_orcounter_update.c
src/solvers/smurf/fn_smurf/: Makefile.am  Makefile.in  bdd2smurf.c  hr_lsgb_smurf_init.c  hr_lsgb_smurf_update.c
src/solvers/smurf/fn_xor/: Makefile.am  Makefile.in  hr_lsgb_xor_init.c
src/solvers/smurf/fn_xorcounter/: Makefile.am  Makefile.in  bt_specfn_xorcounter.c  fn_xorcounter.c  hr_lsgb_xorcounter_init.c  hr_lsgb_xorcounter_update.c
src/solvers/smurf/fn_xorfactor/: Makefile.am  Makefile.in  bdd2specfn_xorfactor.c  bt_specfn_xorfactor.c
src/solvers/smurf/include/: Makefile.am  Makefile.in  fn_andequals.h  fn_andequalscounter.h  fn_inference.h  fn_negminmax.h  fn_orcounter.h  fn_xor.h  smurfs.h  solver.h
src/utils/: Makefile.am  Makefile.in  sbsat_params.c  sbsat_stats.c  sbsat_types.c  symtable.c  termcap.c  utils.c
(+13 files in other folders)
