EXTRA_DIST=sbsat.h sbsat_types.h sbsat_formats.h sbsat_headers.h sbsat_print.h sbsat_utils.h \
           sbsat_vars.h sbsat_params.h symtable.h config.h \
           aiger.h bdd_manager.h bdd_ops.h bdd_clustering.h bdd_type_detection.h \
           bdd_print.h sbsat_queue.h sbsat_stats.h equiv.h inference_queue.h \
           sbsat_solvers.h
