INCLUDES=-I$(top_srcdir)/include -I$(top_srcdir)/src/solvers/funcsat/src
sources=sbsat_params.c sbsat_params_fn.c sbsat_print.c sbsat_vars.c \
        symtable.c termcap.c utils.c zread.c queue.c sbsat_types.c \
        sbsat_stats.c signal.c equiv.c

noinst_LTLIBRARIES = libutils.la
libutils_la_SOURCES=$(sources)
