INCLUDES=-I$(top_srcdir)/include -I$(top_srcdir)/src/solvers/smurf/include -I$(top_srcdir)/src/solvers/funcsat/src

sources= fn_andequals.c bdd2specfn_andequals.c bt_specfn_andequals.c hr_lsgb_andequals_init.c hr_lsgb_andequals_update.c

noinst_LTLIBRARIES = libfnandequals_solver.la
libfnandequals_solver_la_SOURCES= $(sources)
