INCLUDES=-I$(top_srcdir)/include -I$(top_srcdir)/src/solvers/smurf/include -I$(top_srcdir)/src/solvers/funcsat/src

sources= fn_andequalscounter.c bdd2specfn_andequalscounter.c bt_specfn_andequalscounter.c hr_lsgb_andequalscounter_init.c hr_lsgb_andequalscounter_update.c

noinst_LTLIBRARIES = libfnandequalscounter_solver.la
libfnandequalscounter_solver_la_SOURCES= $(sources)
