INCLUDES=-I$(top_srcdir)/include -I$(top_srcdir)/src/solvers/smurf/include -I$(top_srcdir)/src/solvers/funcsat/src

sources= fn_minmax.c bdd2specfn_minmax.c bt_specfn_minmax.c hr_lsgb_minmax_init.c hr_lsgb_minmax_update.c

noinst_LTLIBRARIES = libfnminmax_solver.la
libfnminmax_solver_la_SOURCES= $(sources)
