INCLUDES=-I$(top_srcdir)/include -I$(top_srcdir)/src/solvers/smurf/include -I$(top_srcdir)/src/solvers/funcsat/src

sources= fn_minmaxcounter.c bdd2specfn_minmaxcounter.c bt_specfn_minmaxcounter.c hr_lsgb_minmaxcounter_init.c hr_lsgb_minmaxcounter_update.c

noinst_LTLIBRARIES = libfnminmaxcounter_solver.la
libfnminmaxcounter_solver_la_SOURCES= $(sources)
