INCLUDES=-I$(top_srcdir)/include -I$(top_srcdir)/src/solvers/smurf/include -I$(top_srcdir)/src/solvers/funcsat/src

sources= fn_negminmax.c bdd2specfn_negminmax.c bt_specfn_negminmax.c hr_lsgb_negminmax_init.c hr_lsgb_negminmax_update.c

noinst_LTLIBRARIES = libfnnegminmax_solver.la
libfnnegminmax_solver_la_SOURCES= $(sources)
