INCLUDES=-I$(top_srcdir)/include -I$(top_srcdir)/src/solvers/smurf/include -I$(top_srcdir)/src/solvers/funcsat/src

sources= fn_negminmaxcounter.c bdd2specfn_negminmaxcounter.c bt_specfn_negminmaxcounter.c hr_lsgb_negminmaxcounter_init.c hr_lsgb_negminmaxcounter_update.c

noinst_LTLIBRARIES = libfnnegminmaxcounter_solver.la
libfnnegminmaxcounter_solver_la_SOURCES= $(sources)
