INCLUDES=-I$(top_srcdir)/include -I$(top_srcdir)/src/solvers/smurf/include -I$(top_srcdir)/src/solvers/funcsat/src

sources= fn_orcounter.c bdd2specfn_orcounter.c bt_specfn_orcounter.c hr_lsgb_orcounter_init.c hr_lsgb_orcounter_update.c

noinst_LTLIBRARIES = libfnorcounter_solver.la
libfnorcounter_solver_la_SOURCES= $(sources)
