INCLUDES=-I$(top_srcdir)/include -I$(top_srcdir)/src/solvers/smurf/include -I$(top_srcdir)/src/solvers/funcsat/src

sources= fn_xorcounter.c bdd2specfn_xorcounter.c bt_specfn_xorcounter.c hr_lsgb_xorcounter_init.c hr_lsgb_xorcounter_update.c

noinst_LTLIBRARIES = libfnxorcounter_solver.la
libfnxorcounter_solver_la_SOURCES= $(sources)
