INCLUDES=-I$(top_srcdir)/include -I$(top_srcdir)/src/solvers/smurf/include -I$(top_srcdir)/src/solvers/funcsat/src

sources= fn_xorfactor.c bdd2specfn_xorfactor.c bt_specfn_xorfactor.c hr_lsgb_xorfactor_init.c hr_lsgb_xorfactor_update.c

noinst_LTLIBRARIES = libfnxorfactor_solver.la
libfnxorfactor_solver_la_SOURCES= $(sources)
